Subida para tarea 6

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -62,4 +62,6 @@
     <string name="subida_evento">Event upload</string>
     <string name="perfil_agrupacion">Group profile</string>
     <string name="perfil_usuario">User profile</string>
+    <string name="todo">TODO</string>
+    <string name="addEvent">Upload an event</string>
 </resources>
