Subida para tarea 8. Base de datos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,27 @@
     <string name="subida_evento">Subida evento</string>
     <string name="perfil_agrupacion">Perfil de agrupacion</string>
     <string name="perfil_usuario">Perfil de usuario</string>
+    <string name="nombre">Nombre</string>
+    <string name="action_agrupacionList">Agrupaciones</string>
+    <string name="action_info_evento">Eventos</string>
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="opciones">Opciones</string>
+    <string name="errorPasswordEmpty">Contraseña vacia</string>
+    <string name="errorPassword">Contraseña no valida</string>
+    <string name="errEmailEmpty">Email vacio</string>
+    <string name="errEmail">Email no valido</string>
 
 </resources>
