Subida para tarea 8. Base de datos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,5 +105,6 @@
     <string name="errorPassword">Contraseña no valida</string>
     <string name="errEmailEmpty">Email vacio</string>
     <string name="errEmail">Email no valido</string>
+    <string name="action_delete">Borrar</string>
 
 </resources>
